fixing alignment for hompage image and text

--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -17,8 +17,8 @@
     flex-direction: inherit;
     
     width: 100%;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-top: 75px;
     padding-bottom: 75px;
 
