--- a/components/PageSpecific/Index/ProfileImage.module.scss
+++ b/components/PageSpecific/Index/ProfileImage.module.scss
@@ -5,26 +5,30 @@
 .ProfileImage {
     
     display: flex;
-    justify-content: center;
-    align-content: center;
+    flex-direction: column;
+    align-items: center;
 
     img{
+        width: 400px;
         border-radius: 50%;
         border-style: solid;
         border-color: $on-secondary;
+        margin: 20px;
+    }
 
-    
-        @media screen and (min-width: 20em) {
-            width: 80%
+    .ProfileTitle{
+        max-width: 600px;
+    }
+
+    @media screen and (orientation:landscape) {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        .ProfileTitle{
+            justify-content: flex-start;
         }
-    
-        @media screen and (min-width: 50em) {
-            width: 50%
-        }
-    
-        
-        @media screen and (min-width: 80em) {
-            width: 30%;        
+        img {
+            justify-content: flex-end;
         }
     }
     
